# ChatGPT-T

./: .env.example  .gitignore  .mise.toml  README.md  UPDATE_LOG.md  install.json  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: builder.rs  cmd.rs  gpt.rs  mod.rs
src-tauri/src/app/cmd/: download.rs  gpt.rs  mod.rs  window.rs
src/api/: gpt.ts  index.ts
src/components/common/PromptStore/: index.vue
src/components/common/Setting/: About.vue  General.vue  User.vue  index.vue
src/components/common/UserAvatar/: index.vue
src/locales/: en-US.ts  zh-CN.ts  zh-TW.ts
src/router/: index.ts
src/store/modules/chat/: helper.ts  index.ts
src/store/modules/user/: helper.ts  index.ts
src/styles/: global.less
src/typings/: chat.d.ts  env.d.ts
src/views/chat/: index.vue
src/views/chat/components/Message/: Text.vue  index.vue
src/views/chat/hooks/: useChat.ts
src/views/chat/layout/: Layout.vue
src/views/chat/layout/sider/: Footer.vue  index.vue
src/views/window/: Layout.vue  index.ts
